Add Polly retry and remove unused classes

--- a/SurveyDeliverySystem/appsettings.json
+++ b/SurveyDeliverySystem/appsettings.json
@@ -9,7 +9,7 @@
 
 
   "SendGridSettings": {
-    "ApiKey": "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",
+    "ApiKey": "Your API Key",
     "FromEmail": "alwaleed_Albader@hotmail.com",
     "FromName": "Alwaleed APP"
   },
