--- a/SurveyDeliverySystem/SurveyDeliverySystem.csproj
+++ b/SurveyDeliverySystem/SurveyDeliverySystem.csproj
@@ -7,10 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0" />
     <PackageReference Include="Polly" Version="8.4.1" />
-    <PackageReference Include="Scrutor" Version="4.2.2" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
   </ItemGroup>
 
